--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -31,11 +31,11 @@
 						                <div th:if="${param.logout}" class="alert alert-success"> 
 						                    You have been logged out.
 						                </div>
-						                <div class="ui-widget form-section">
+						                <div class="form-section">
 						                <label for="username">Username:</label>
 						                <input type="text" id="username" name="username" class="span3"/>
 						                </div>
-						                <div class="ui-widget form-section">        
+						                <div class="form-section">        
 						                <label for="password">Password:</label>
 						                <input type="password" id="password" name="password" class="span3"/>    
 						                </div>
