--- a/src/main/resources/templates/loggedInPage.html
+++ b/src/main/resources/templates/loggedInPage.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="shortcut icon" href="/images/favicon.ico" />
     
-    <link href="/css/sitestyle.css" rel="stylesheet"/>
+        <!-- Google Fonts -->
+        <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,600,700,300' rel='stylesheet' type='text/css'/>
+        <!-- Base Stylesheet -->
+        <link rel="stylesheet" href="/css/base.css"/>
+        <link rel="stylesheet" href="/css/sitestyle.css"/>
+        <link rel="stylesheet" class="alt" href="/css/theme-blue.css"/>
     
 </head>
 <body class="wide">
